tg-7023 [FE] Agregar visualizacion de ART en cobertura medica del paciente

--- a/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
@@ -84,7 +84,8 @@
 		"VOLUNTARY": "Voluntaria",
 		"MANDATORY": "Obligatoria",
 		"CUIT_VIEW" : "CUIT: {{cuit}}",
-		"SEARCH_ART": "Buscar ART"
+		"SEARCH_ART": "Buscar ART",
+		"ART": "ART"
 	},
 	"messages": {
 		"NO_DATA": "No hay información para mostrar"
