--- a/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
@@ -78,6 +78,7 @@
 		"ADD_PRIVATE_HEALTH_INSURANCES": "Agregar prepaga",
 		"NEW_HEALTH_INSURANCE": "Agregar nueva Obra social",
 		"NEW_PRIVATE_HEALTH_INSURANCE": "Agregar nueva Prepaga",
+		"UPDATE_HEALTH_INSURANCE": "Editar Obra Social",
 		"ADD_ART_COVERAGE": "Agregar ART",
 		"NEW_ART_COVERAGES": "Agregar nueva ART",
 		"buttons": {
