tg-7073 Crear item componente de estudios

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -474,7 +474,12 @@
             },
             "studies": {
                 "TAB_LABEL": "Estudios",
-                "TITLE": "Estudios"
+                "TITLE": "Estudios",
+				"INTERNMENT_MEDICAL_STUDY": "Estudio solicitado durante internación",
+				"study_state" : {
+					"PENDING": "Pendiente",
+					"COMPLETED": "Completo"
+				}
             },
             "internacion": {
                 "TAB_LABEL": "Internación"
