tg-7123 [FE] Crear dialogo de error al hacer una orden para una internación sin diagnósticos

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -532,6 +532,9 @@
                 "TITLE": "Alergias críticas"
             },
 			"internment-order" : {
+				"diagnosis-required-dialog" : {
+					"MESSAGE" : "El episodio de internación debe tener un diagnóstico asociado"
+				},
 				"create-order-dialog" : {
 					"TITLE": "Nueva orden",
 					"CATEGORY": "Categoría del estudio",
