--- a/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
@@ -298,7 +298,8 @@
 			},
 			"info": {
 				"WITHOUT_DIAGNOSIS": "Sin diagnóstico definido"
-			}
+			},
+			"WITHOUT_OBSERVATIONS": "No hay observaciones para mostrar"
 		},
 		"nota-evolucion": {
 			"TITLE": "Nota de evolución",
@@ -455,6 +456,19 @@
 				"CONFIRMACION": "¿Está seguro que desea realizar el pase de cama? ",
 				"ERROR": "Error al generar pase de cama",
 				"SUCCESS": "El pase de cama se guardó exitosamente"
+			}
+		},
+		"delete-document": {
+			"messages": {
+				"ERROR": "Error al eliminar el documento",
+				"SUCCESS": "El documento se eliminó exitosamente"
+			}
+		},
+		"dialogs": {
+			"actions-document": {
+				"DELETE_TITLE": "Aclarar motivo de eliminación",
+				"SUBTITLE": "Para confirmar los cambios por favor especifique el motivo por el cual edita este documento.",
+				"REASON": "Motivo"
 			}
 		}
 	}
