tg-7155 [MEJORA] Titulo de pop Agregar fármaco

--- a/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
@@ -109,7 +109,7 @@
 					"START-TIME": "Hora de inicio",
 					"OBSERVATIONS": "Observaciones",
 					"add-snomed-concept":{
-						"TITLE": "Agregar medicación",
+						"TITLE": "Agregar fármaco",
 						"SEARCH": "Fármaco"
 					},
 					"foodRelation":{
