tg-7152 [MEJORA] Agrega icono y titulo para la Evaluación Clínica y los Procedimientos

--- a/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
@@ -299,7 +299,8 @@
 			"info": {
 				"WITHOUT_DIAGNOSIS": "Sin diagnóstico definido"
 			},
-			"WITHOUT_OBSERVATIONS": "No hay observaciones para mostrar"
+			"WITHOUT_OBSERVATIONS": "No hay observaciones para mostrar",
+			"CLINICAL_EVALUATION": "Evaluación clínica"
 		},
 		"nota-evolucion": {
 			"TITLE": "Nota de evolución",
