tg-7124 Añadir íconos y títulos para las categorías de estudio

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -479,6 +479,16 @@
 				"study_state" : {
 					"PENDING": "Pendiente",
 					"COMPLETED": "Completo"
+				},
+				"sections": {
+					"IMAGES": "Imágenes",
+					"LABORATORY": "Laboratorio",
+					"PATHOLOGIC_ANATOMY": "Anatomía patológica",
+					"HEMOTHERAPY": "Hemoterapia",
+					"SURGICAL_PROCEDURE": "Procedimientos quirúrgico",
+					"OTHER_PROCEDURES_AND_PRACTICES": "Otros procedimientos y prácticas",
+					"ADVICE": "Asesoramiento",
+					"EDUCATION": "Educación"
 				}
             },
             "internacion": {
