tg-7196 [FE] Agregar botón de "Agregar otro estudio" en orden de internación

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -543,6 +543,9 @@
 					"NOTES": "Observaciones",
 					"NEXT_BUTTON": "Agregar",
 					"TEMPLATE_DETAIL": "Incluye: {{concepts}}.",
+					"ADD_STUDY": "+ Agregar otro estudio",
+					"ADD_STUDY_DIALOG_TITLE": "Agregar otro estudio",
+					"STUDY_REPEATED": "El estudio seleccionado ya está presente en la orden",
                     "CONFIRM_ORDER": "Finalizar orden"
 				}
 			}
