#6946 Cambiar botón de "Fecha de alta probable de internación"

--- a/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
@@ -345,6 +345,7 @@
 				"ONE_DAY": "1 día internado",
 				"ADMISSION": "Ingreso: {{datetime}}",
 				"PROBABLE_DISCHARGE": "Fecha probable de alta: {{datetime}}",
+				"DISCHARGE_DATE_CHANGE": "Cambiar",
 				"probable_discharge_dialog": {
 					"TITLE": "Actualizar fecha de alta probable",
 					"PLACEHOLDER": "Fecha de alta probable",
