tg-7274 Unifica configuración del servidor de envío de mails

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -224,8 +224,8 @@ spring.mail.properties.mail.transport.protocol=Protocolo del servidor de mails.
 spring.mail.properties.mail.smtp.auth=Define si requiere autenticación.
 spring.mail.properties.mail.smtp.starttls.required=Habilita el uso del comando STARTTLS (si el servidor lo soporta) para cambiar la conexión a protegida por TLS.
 spring.mail.properties.mail.smtp.starttls.enable=Habilita el uso del comando STARTTLS (si el servidor lo soporta) para cambiar la conexión a protegida por TLS.
-app.mail.activate=Activa el uso de mail.
-mail.from=Define el mail de origin.
+app.notification.mail.from=Define el mail del origin.
+app.notification.mail.fromFullname=Define el nombre de origin.
 
 management.endpoint.metrics.enabled=Habilita métricas del servidor.
 management.endpoints.web.exposure.include=Define que endpoints de la librería actuator se pueden consultar.
@@ -355,3 +355,6 @@ spring.servlet.multipart.max-file-size=Define tamaño máximo por archivo
 spring.servlet.multipart.max-request-size=Define tamaño máximo del request
 #sun.management.compiler
 app.system.properties.cron.config=Define frecuencia de ejecución de la tarea que carga las propiedades del sistema configuradas
+
+mail.subject.email-confirmar-reserva=Confirmación de turno online
+mail.subject.new-appointment=Nuevo turno
