tg-7320. [FE] Agregar checkbox para marcar horario disponible para reservas

--- a/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
@@ -26,7 +26,8 @@
 			"SELECT_DAYS_TYPE_SUBTITLE": "Seleccione tipos de consulta para cada día",
 			"dialog": {
 				"TITLE": "Nueva atención",
-				"EDIT": "Editar atención"
+				"EDIT": "Editar atención",
+				"BOOKING": "Disponible para turnos online"
 			},
 			"messages": {
 				"SUCCESS": "La agenda se guardó exitosamente",
