tg-7367 Crear boton de agregar observacion con el area de texto y botones de guardar y cancelar

--- a/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
@@ -83,6 +83,14 @@
 			"coverageData": {
 				"COVERAGE_DATA": "Cobertura Médica",
 				"UPDATE_SUCCESS": "Los datos se han modificado correctamente"
+			},
+			"observations": {
+				"OBSERVATIONS": "Observaciones",
+				"UPDATE_SUCCESS": "Las observaciones se han modificado correctamente",
+				"ADD_OBSERVATION": "+ Agregar observaciones",
+				"ADD_OBSERVATION_SUBTITLE": "Ingrese observaciones...",
+				"SAVE": "Guardar",
+				"CANCEL": "Cancelar"
 			}
 		},
 		"report": {
