--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -145,9 +145,8 @@
                     "FECHA_FIN": "Fecha fin",
                     "FECHA_INICIO": "Fecha inicio",
                     "FECHA": "Fecha",
-                    "PROBLEMA": "Problema",
-                    "TABLE_TITLE": "Problemas registrados",
-                    "TITLE": "Problema",
+                    "PROBLEMA": "Problemas registrados",
+                    "TITLE": "Problemas",
                     "ACLARACION_CRONICO": "(Crónico)",
                     "FECHA_INICIO_PREFIJO": "Desde",
                     "FECHA_FIN_PREFIJO": "Hasta",
@@ -313,7 +312,6 @@
                     "CONSULTATION_DATE": "Fecha de consulta",
                     "REFERENCE_REQUEST": "referencia solicitada",
                     "CARE_LINE": "Línea de cuidado:",
-                    "SPECIALTY": "Especialidad:",
                     "SUMMARY_REFERENCE": "Resumen de referencia",
                     "COUNTERREFERENCE": "Contrarreferencia",
                     "PROCEDURE": "Procedimientos:"
@@ -376,10 +374,10 @@
                 "UN_DIA": "Hace 1 día",
                 "APLICACION_DIARIA": "Una aplicación por día",
                 "USO_CRONICO": "Uso crónico",
-				"new_prescription_menu": {
-					"NEW_OUTPATIENT_PRESCRIPTION": "Nueva orden de Ambulatorio",
-					"NEW_INTERNMENT_PRESCRIPTION": "Nueva orden de Internación"
-				},
+                "new_prescription_menu": {
+                    "NEW_OUTPATIENT_PRESCRIPTION": "Nueva orden de Ambulatorio",
+                    "NEW_INTERNMENT_PRESCRIPTION": "Nueva orden de Internación"
+                },
                 "add_prescription_item_dialog": {
                     "MEDICATION": "Medicación",
                     "MEDICATION_TITLE": "Agregar medicación",
@@ -475,21 +473,21 @@
             "studies": {
                 "TAB_LABEL": "Estudios",
                 "TITLE": "Estudios",
-				"INTERNMENT_MEDICAL_STUDY": "Estudio solicitado durante internación",
-				"study_state" : {
-					"PENDING": "Pendiente",
-					"COMPLETED": "Completo"
-				},
-				"sections": {
-					"IMAGES": "Diagnóstico por imágenes",
-					"LABORATORY": "Laboratorio",
-					"PATHOLOGIC_ANATOMY": "Anatomía patológica",
-					"HEMOTHERAPY": "Hemoterapia",
-					"SURGICAL_PROCEDURE": "Procedimientos quirúrgicos",
-					"OTHER_PROCEDURES_AND_PRACTICES": "Otros procedimientos y prácticas",
-					"ADVICE": "Asesoramiento",
-					"EDUCATION": "Educación"
-				}
+                "INTERNMENT_MEDICAL_STUDY": "Estudio solicitado durante internación",
+                "study_state": {
+                    "PENDING": "Pendiente",
+                    "COMPLETED": "Completo"
+                },
+                "sections": {
+                    "IMAGES": "Diagnóstico por imágenes",
+                    "LABORATORY": "Laboratorio",
+                    "PATHOLOGIC_ANATOMY": "Anatomía patológica",
+                    "HEMOTHERAPY": "Hemoterapia",
+                    "SURGICAL_PROCEDURE": "Procedimientos quirúrgicos",
+                    "OTHER_PROCEDURES_AND_PRACTICES": "Otros procedimientos y prácticas",
+                    "ADVICE": "Asesoramiento",
+                    "EDUCATION": "Educación"
+                }
             },
             "internacion": {
                 "TAB_LABEL": "Internación"
@@ -546,43 +544,43 @@
             "allergies": {
                 "TITLE": "Alergias críticas"
             },
-			"internment-order" : {
-				"diagnosis-required-dialog" : {
-					"MESSAGE" : "El episodio de internación debe tener un diagnóstico asociado"
-				},
-				"create-order-dialog" : {
-					"TITLE": "Nueva orden de Internación",
-					"CATEGORY": "Categoría del estudio",
-					"STUDY": "Nombre del estudio",
-					"HEALTH_PROBLEM": "Diagnóstico asociado",
-					"NOTES": "Observaciones",
-					"NEXT_BUTTON": "Agregar",
-					"TEMPLATE_DETAIL": "Incluye: {{concepts}}.",
-					"ADD_STUDY": "+ Agregar otro estudio",
-					"ADD_STUDY_DIALOG_TITLE": "Agregar otro estudio",
-					"STUDY_REPEATED": "El estudio seleccionado ya está presente en la orden",
-					"CONFIRM_ORDER": "Finalizar orden"
-				}
-			},
-			"outpatient-order" : {
-				"problem-required-dialog" : {
-					"MESSAGE" : "El paciente debe poseer un problema activo o crónico al cual asociar la orden"
-				},
-				"create-order-dialog" : {
-					"TITLE": "Nueva orden de Ambulatorio",
-					"CATEGORY": "Categoría del estudio",
-					"STUDY": "Nombre del estudio",
-					"HEALTH_PROBLEM": "Problema",
-					"NOTES": "Observaciones",
-					"NEXT_BUTTON": "Agregar",
-					"TEMPLATE_DETAIL": "Incluye: {{concepts}}.",
-					"ADD_STUDY": "+ Agregar otro estudio",
-					"ADD_STUDY_DIALOG_TITLE": "Agregar otro estudio",
-					"STUDY_REPEATED": "El estudio seleccionado ya está presente en la orden",
-					"CONFIRM_ORDER": "Finalizar orden"
-				}
-			}
-		},
+            "internment-order": {
+                "diagnosis-required-dialog": {
+                    "MESSAGE": "El episodio de internación debe tener un diagnóstico asociado"
+                },
+                "create-order-dialog": {
+                    "TITLE": "Nueva orden de Internación",
+                    "CATEGORY": "Categoría del estudio",
+                    "STUDY": "Nombre del estudio",
+                    "HEALTH_PROBLEM": "Diagnóstico asociado",
+                    "NOTES": "Observaciones",
+                    "NEXT_BUTTON": "Agregar",
+                    "TEMPLATE_DETAIL": "Incluye: {{concepts}}.",
+                    "ADD_STUDY": "+ Agregar otro estudio",
+                    "ADD_STUDY_DIALOG_TITLE": "Agregar otro estudio",
+                    "STUDY_REPEATED": "El estudio seleccionado ya está presente en la orden",
+                    "CONFIRM_ORDER": "Finalizar orden"
+                }
+            },
+            "outpatient-order": {
+                "problem-required-dialog": {
+                    "MESSAGE": "El paciente debe poseer un problema activo o crónico al cual asociar la orden"
+                },
+                "create-order-dialog": {
+                    "TITLE": "Nueva orden de Ambulatorio",
+                    "CATEGORY": "Categoría del estudio",
+                    "STUDY": "Nombre del estudio",
+                    "HEALTH_PROBLEM": "Problema",
+                    "NOTES": "Observaciones",
+                    "NEXT_BUTTON": "Agregar",
+                    "TEMPLATE_DETAIL": "Incluye: {{concepts}}.",
+                    "ADD_STUDY": "+ Agregar otro estudio",
+                    "ADD_STUDY_DIALOG_TITLE": "Agregar otro estudio",
+                    "STUDY_REPEATED": "El estudio seleccionado ya está presente en la orden",
+                    "CONFIRM_ORDER": "Finalizar orden"
+                }
+            }
+        },
         "screen_change_warning_dialog": {
             "CONTENT": "Usted ha iniciado una consulta, si cambia de pantalla la información cargada se perderá.",
             "ANSWER_CONTENT": "¿Desea continuar de todos modos?",
