tg-7378 [FE] Agregar boton de seguir editando epicrisis

--- a/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
@@ -175,6 +175,7 @@
 			},
 			"buttons": {
 				"ATTACH_SIGNATURE": "Adjuntar firma digital",
+				"EDIT_DRAFT": "Seguir editando",
 				"SAVE_DRAFT": "Guardar borrador",
 				"CONFIRM": "Confirmar"
 			},
