tg-7447. [FE] Reubicar IDs y unificar estilos de botones para agregar conceptos

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -231,7 +231,7 @@
                 },
                 "solicitud-referencia": {
                     "TITLE": "Solicitud de referencia",
-                    "ADD_REQUEST": "+ Agregar solicitud",
+                    "ADD_REQUEST": "Agregar solicitud",
                     "REQUESTED_REFERENCE": "Referencias solicitadas",
                     "table": {
                         "columns": {
