--- a/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
@@ -60,6 +60,9 @@
 				"DIAGNOSIS": "Diagnóstico",
 				"CONFIRMED": "Confirmado",
 				"PRESUMPTIVE": "Presuntivo",
+				"DISCARD": "Descartado",
+				"REMISSION": "Remisión",
+				"RESOLVED": "Resuelto",
 				"ANAMNESIS_SUBTITLE": "Agregue los diagnósticos detectados",
 				"EVOLUTION_NOTE_SUBTITLE": "Seleccione los diagnósticos que desea evolucionar o agregue nuevos",
 				"VERIFICATION": "Verificación",
