tg-7492  [FE] Agregar botón para cerrar epicrisis borrador

--- a/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
@@ -177,6 +177,7 @@
 				"ATTACH_SIGNATURE": "Adjuntar firma digital",
 				"EDIT_DRAFT": "Seguir editando",
 				"SAVE_DRAFT": "Guardar borrador",
+				"FINALIZE": "Finalizar y dar alta medica",
 				"CONFIRM": "Confirmar"
 			},
 			"diagnosticos": {
