tg-7591. [BE] Validar matriculas repetidas por tipo

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -204,7 +204,9 @@ medical-coverage.cuit-duplicated = El CUIT ya se encuentra asociado a otra cober
 medical-coverage.invalid-cuit =  El CUIT debe ser numérico
 medical-coverage.plan-exists =  El plan ya se encuentra asociado a la cobertura médica
 
-
+####### Professional license numbers #######
+professional.licensenumbers.repeated = El profesional ya contiene una matricula de ese tipo
+professional.specialty.licensenumbers.repeated = La especialidad del profesional ya contiene una matricula de ese tipo
 
 ###### Booking ######
 booking-healthinsurance-practice.exists = Esa obra social ya está asociada a esa práctica
