tg-7551 [FE] Agrega pop-up

--- a/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
@@ -107,6 +107,10 @@
 			"TITLE": "Descargar informes",
 			"ANEXO": "Anexo II",
 			"FORM": "Formulario V"
+		},
+		"calendar-view-professional": {
+			"TITLE": "Agenda de turnos",
+			"GO_TO_DIARY": "Ir a turnos"
 		}
 	}
 }
