tg-7528. [FE] Poder expandir y contraer secciones de la consulta enfermería

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -158,7 +158,7 @@
                     },
                     "FECHA": "Fecha",
                     "TABLE_TITLE": "Procedimientos registrados",
-                    "TITLE": "Procedimiento",
+                    "TITLE": "Procedimientos",
                     "TIPO": "Tipo de procedimiento",
                     "PROCEDIMIENTO": "Procedimiento",
                     "SEARCH_PLACEHOLDER": "Buscar procedimiento"
