tg-7529. [FE] Nueva estética en sección "Especialidad" y posibilidad de contraerse en consulta ambulatoria y de enfermería

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -60,7 +60,7 @@
             },
             "nueva-consulta": {
                 "TITLE": "Nueva consulta",
-                "SUBTITLE": "Completa los siguientes datos.",
+                "SPECIALTY": "Especialidad",
                 "TITLE_MENU": "Consulta",
                 "TENSION_SISTOLICA": "Tensión sistólica",
                 "TENSION_DIASTOLICA": "Tensión diastólica",
