tg-7057 [P2] INTERNACION-filtros de card evoluciones funcionan incorrectamente

--- a/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
@@ -314,7 +314,8 @@
 			},
 			"WITHOUT_OBSERVATIONS": "No hay observaciones para mostrar",
 			"CLINICAL_EVALUATION": "Evaluación clínica",
-			"EDITED_DOCUMENT": "(Editado)"
+			"EDITED_DOCUMENT": "(Editado)",
+			"NO_FILTERED_PROBLEMS": "No hay resultados para la búsqueda seleccionada"
 		},
 		"nota-evolucion": {
 			"TITLE": "Nota de evolución",
