tg-7609 [Mejora] Editar carteles de confirmación

--- a/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
@@ -219,6 +219,10 @@
 				"ERROR": "Error al guardar documento de epicrisis",
 				"SUCCESS": "El documento de epicrisis se guardó exitosamente"
 			},
+			"messages-draft": {
+				"ERROR": "Error al guardar borrador de epicrisis",
+				"SUCCESS": "El borrador de epicrisis se guardó exitosamente"
+			},
 			"observations": {
 				"TITLE": "Evaluación clínica",
 				"EVOLUTION_NOTE": "Evolución",
