tg-7629 Corrección en la pantalla de camas

--- a/front-end/apps/projects/hospital/src/assets/i18n/camas/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/camas/es-AR.json
@@ -22,7 +22,7 @@
         "filters": {
             "FREE_BEDS": "Ver camas ocupadas",
             "SECTOR": "Sector",
-            "SPECIALITY": "Especialidad",
+            "SERVICE": "Servicio",
             "BED_CATEGORY": "Categoría",
             "PROBABLE_DISCHARGE_DATE": "Fecha de alta probable"
         }
