--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -121,6 +121,7 @@ healthcareprofessional.exists=This person is already registered as a professiona
 healthcare-professional.specialty-profession-exists=The profession specialty already exists
 healthcare-professional.specialty-profession-not-assigned=The profession specialty is not assigned already
 healthcare-professional.id.error.validation=Only can see own diaries
+healthcareprofessional.license-blank=License number not defined
 
 ####### Outpatient #######
 problem.dates.not.after= End date cannot be before of start date
