--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -128,6 +128,7 @@ healthcare-professional.specialty-profession-not-exists=La especialidad no exist
 healthcare-professional.specialty-profession-not-assigned=La profesión y especialidad no se encuentra asignada
 healthcare-professional.affected-to-diary-agenda=Esta especialidad y profesional estÃ¡n afectados a una agenda en curso
 healthcareprofessional.healthinsurance=Esa obra social/prepaga ya estÃ¡ asociada a este profesional
+healthcareprofessional.license-blank=Número de matrícula no definido
 
 ####### Outpatient #######
 problem.dates.not.after= La fecha de fin no puede ser anterior al inicio del problema.
