tg-7656. [BE] Hacer obligatorio la carga de una especialidad al momento de asociar una profesión

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -128,6 +128,7 @@ healthcare-professional.specialty-profession-not-exists=La especialidad no exist
 healthcare-professional.specialty-profession-not-assigned=La profesión y especialidad no se encuentra asignada
 healthcare-professional.affected-to-diary-agenda=Esta especialidad y profesional estÃ¡n afectados a una agenda en curso
 healthcareprofessional.healthinsurance=Esa obra social/prepaga ya estÃ¡ asociada a este profesional
+healthcareprofessional.linkprofession=Asociar una profesiÃ³n requiere al menos de una especialidad
 healthcareprofessional.license-blank=Número de matrícula no definido
 
 ####### Outpatient #######
