tg-7660 [P1] Hotfix procesos de sincronización de cache
(cherry picked from commit 883fe03617cd0aa9d0188290d2bdecb0f5432e83)

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -287,6 +287,8 @@ snomed-semantics.medicine.ecl=Ecl para b√∫squeda de medicamentos.
 snomed-semantics.procedureGroup.ecl=Ecl para b√∫squeda de procedimientos.
 snomed-semantics.consultationReason.ecl=Ecl para b√∫squeda de motivos de consulta.
 
+snomed-cache-update.batch-size=TamaÒo de batch de guardado de conceptos Snomed para la actualizaciÛn de cachÈ mediante archivo .CSV
+
 ws.nomivac.synchronization.url.base=URL del dominio donde se sincroniza las vacunas.
 ws.nomivac.synchronization.cron.config=Cron que determina la periodicidad con la que se env√≠a los datos a nomivac.
 app.feature.HABILITAR_BUS_INTEROPERABILIDAD=Define si se va a realizar una comunicaci√≥n con el bus de interoperabilidad.
