tg-7640. [FE] "Medicación habitual" aparezca en popup fuera de la consulta ambulatoria

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -121,7 +121,7 @@
                     "TITLE": "Medicación habitual",
                     "STATE": "Estado",
                     "MEDICATION": "Medicación",
-                    "ADD": "Agregar Medicación"
+                    "ADD": "Agregar medicación"
                 },
                 "messages": {
                     "ERROR": "Error al guardar documento de nueva consulta ambulatoria",
