tg-7635. [FE] Un título de sección que se contrae-expande puede mostrar la etiqueta "recomendado"

--- a/front-end/apps/projects/hospital/src/assets/i18n/historia-clinica/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/historia-clinica/es-AR.json
@@ -1,5 +1,8 @@
 {
 	"historia-clinica": {
+		"new-consultation-expansion-section": {
+			"RECOMMEND": "Recomendado"
+		},
 		"summary-card": {
 			"evolution-notes-filter": {
 				"filterFieldIsRequiredWhenInputIsSet": "Debe seleccionar un tipo de filtro",
