tg-7589 [FE] Agregar botón de editar fecha y hora de turno

--- a/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
@@ -86,7 +86,8 @@
 		"appointment": {
 			"TITLE": "Turno",
 			"BUTTON_CLINICAL_HISTORY": "Ver historia clínica",
-			"EDIT_PACIENT_INFO": "Editar información del paciente",
+			"EDIT_PATIENT_INFO": "Editar información del paciente",
+			"EDIT_DATE_TIME": "Editar fecha y hora del turno",
 			"APPOINTMENT_STATE": "Estado de turno",
 			"MOTIVE": "Motivo",
 			"SAVE": "Guardar",
