tg-7761 [FE] Agrega nueva sección de enfermería

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -571,6 +571,9 @@
                     "STUDY_REPEATED": "El estudio seleccionado ya está presente en la orden",
                     "CONFIRM_ORDER": "Finalizar orden"
                 }
+            },
+            "nursing": {
+                "TAB_LABEL": "enfermería"
             }
         },
         "screen_change_warning_dialog": {
