tg-7762 [FE] Agrega el card "Indicaciones de internación"

--- a/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
@@ -147,6 +147,10 @@
 					}
 				}
 			}
+		},
+		"nursing-care": {
+			"TITLE": "Enfermería",
+			"TITLE_CARD": "Indicaciones de internación"
 		}
 	}
 }
