tg-7765 [FE] Agrega la visualización de las tomas

--- a/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
@@ -150,7 +150,13 @@
 		},
 		"nursing-care": {
 			"TITLE": "Enfermería",
-			"TITLE_CARD": "Indicaciones de internación"
+			"TITLE_CARD": "Indicaciones de internación",
+			"sections": {
+				"TITLE_GENERAL": "Generales"
+			},
+			"status": {
+				"PENDING": "Pendiente"
+			}
 		}
 	}
 }
