tg-7708. [FE] Crear popup de búsqueda del concepto "Motivo de consulta" en consulta odontológica

--- a/front-end/apps/projects/hospital/src/assets/i18n/historia-clinica/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/historia-clinica/es-AR.json
@@ -54,6 +54,11 @@
 		"template-concept-search": {
 			"TEMPLATE_OPTION_GROUP": "Plantillas",
 			"CONCEPT_OPTION_GROUP": "Conceptos"
+		},
+		"new-consultation-add-reason-form": {
+			"ADD_REASON": "Agregar motivo",
+			"REASON": "motivo",
+			"SEARCH_PLACEHOLDER": "Buscar motivo"
 		}
 	}
 }
