tg-7709. [FE] Crear popup de búsqueda del concepto "Otros procedimientos" en consulta odontológica

--- a/front-end/apps/projects/hospital/src/assets/i18n/historia-clinica/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/historia-clinica/es-AR.json
@@ -59,6 +59,13 @@
 			"ADD_REASON": "Agregar motivo",
 			"REASON": "motivo",
 			"SEARCH_PLACEHOLDER": "Buscar motivo"
+		},
+		"new-consultation-procedure-form": {
+			"ADD_PROCEDURE": "Agregar procedimiento",
+			"PROCEDURE": "Procedimiento",
+			"SEARCH_PLACEHOLDER": "Buscar procedimiento",
+			"TYPE": "Tipo de procedimiento",
+			"DATE": "Fecha"
 		}
 	}
 }
