tg-7711. [FE] Crear popup de búsqueda del concepto "Alergias" en consulta odontológica

--- a/front-end/apps/projects/hospital/src/assets/i18n/historia-clinica/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/historia-clinica/es-AR.json
@@ -66,6 +66,12 @@
 			"SEARCH_PLACEHOLDER": "Buscar procedimiento",
 			"TYPE": "Tipo de procedimiento",
 			"DATE": "Fecha"
+		},
+		"new-consultation-allergy-form": {
+			"ADD": "Agregar alergia",
+			"ALLERGY": "Alergia",
+			"SEARCH_PLACEHOLDER": "Buscar alergia",
+			"CRITICALITY": "Criticidad"
 		}
 	}
 }
