tg-7713. [FE] Crear popup de búsqueda del concepto "Medicación habitual" en consulta odontológica

--- a/front-end/apps/projects/hospital/src/assets/i18n/historia-clinica/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/historia-clinica/es-AR.json
@@ -72,6 +72,14 @@
 			"ALLERGY": "Alergia",
 			"SEARCH_PLACEHOLDER": "Buscar alergia",
 			"CRITICALITY": "Criticidad"
+		},
+		"new-consultation-medication-form": {
+			"ADD": "Agregar medicación",
+			"CONCEPT_LABEL": "Medicación habitual",
+			"SEARCH_PLACEHOLDER": "Buscar medicación",
+			"MEDICATION": "Medicación",
+			"OBSERVACIONES": "Observaciones",
+			"SUSPENDIDO": "Suspendido"
 		}
 	}
 }
