tg-7714. [FE] Crear popup de búsqueda del concepto "Procedimientos" en consulta de enfermería

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -155,8 +155,7 @@
                     "TABLE_TITLE": "Procedimientos registrados",
                     "TITLE": "Procedimientos",
                     "TIPO": "Tipo de procedimiento",
-                    "PROCEDIMIENTO": "Procedimiento",
-                    "SEARCH_PLACEHOLDER": "Buscar procedimiento"
+                    "PROCEDIMIENTO": "Procedimiento"
                 },
                 "antecedentes-familiares": {
                     "buttons": {
