se modifico el json principal agregando el nombre del nuevo modulo de reportes

--- a/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
@@ -15,6 +15,7 @@
 			"PERFIL": "Mi cuenta",
 			"TURNOS": "Gestión de turnos",
 			"REPORTES": "Reportes",
+			"REPORTES_PROGRAMAS": "Reportes de programas",
 			"LOGOUT": "Cerrar sesión"
 		}
 	},
